--- a/CustomerUI/MakeTransfer.xaml
+++ b/CustomerUI/MakeTransfer.xaml
@@ -17,8 +17,7 @@
         <Label Content="New balance:" HorizontalAlignment="Left" Margin="144,163,0,0" VerticalAlignment="Top" Width="86"/>
         <TextBox Name="tbNewBalance" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="230,166,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <Label Content="Amount:" HorizontalAlignment="Left" Margin="144,122,0,0" VerticalAlignment="Top"/>
-        <TextBox Name="tbAmount" HorizontalAlignment="Left" Height="23" Margin="208,125,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="142"/>
+        <TextBox Name="tbAmount" HorizontalAlignment="Left" Height="23" Margin="208,125,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="142" KeyDown="tbAmount_KeyDown"/>
         <Button Name="btOK" Click="btOK_Click" IsDefault="True" Content="OK" HorizontalAlignment="Left" Margin="361,224,0,0" VerticalAlignment="Top" Width="92" Height="42"/>
-
     </Grid>
 </Window>
