fixed design in 'make transer' (user)

--- a/CustomerUI/MakeTransfer.xaml
+++ b/CustomerUI/MakeTransfer.xaml
@@ -5,19 +5,24 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CustomerUI"
         mc:Ignorable="d"
-        Title="Make a transfer to another account" Height="322.804" Width="499.711">
+        Title="Make a transfer to another account" Height="332.173" Width="685.387">
     <Grid>
-        <Label Content="Select your account:" HorizontalAlignment="Left" Margin="29,25,0,0" VerticalAlignment="Top"/>
-        <ComboBox Name="comboAccountType" HorizontalAlignment="Left" Margin="150,25,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="comboAccountType_SelectionChanged"/>
-        <Label Content="Balance:" HorizontalAlignment="Left" Margin="275,25,0,0" VerticalAlignment="Top"/>
-        <TextBox Name="tbBalance" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="333,25,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <Label Content="Account number of the beneficiary:" HorizontalAlignment="Left" Margin="29,75,0,0" VerticalAlignment="Top"/>
-        <TextBox Name="tbBeneficiaryAcct" HorizontalAlignment="Left" Height="23" Margin="230,78,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="223" KeyDown="tbBeneficiaryAcct_KeyDown"/>
-        <Button Name="btCancel" Content="Cancel" Click="btCancel_Click" IsCancel="True" HorizontalAlignment="Left" Margin="258,224,0,0" VerticalAlignment="Top" Width="92" Height="42"/>
-        <Label Content="New balance:" HorizontalAlignment="Left" Margin="144,163,0,0" VerticalAlignment="Top" Width="86"/>
-        <TextBox Name="tbNewBalance" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="230,166,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <Label Content="Amount:" HorizontalAlignment="Left" Margin="144,122,0,0" VerticalAlignment="Top"/>
-        <TextBox Name="tbAmount" HorizontalAlignment="Left" Height="23" Margin="208,125,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="142" KeyDown="tbAmount_KeyDown"/>
-        <Button Name="btOK" Click="btOK_Click" IsDefault="True" Content="OK" HorizontalAlignment="Left" Margin="361,224,0,0" VerticalAlignment="Top" Width="92" Height="42"/>
+        <Label Content="Account summary" HorizontalAlignment="Left" Margin="74,36,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="14"/>
+        <StackPanel Background="MediumSeaGreen" HorizontalAlignment="Left" Height="146" Margin="36,65,0,0" VerticalAlignment="Top" Width="210"/>
+        <Label Content="Account no:" HorizontalAlignment="Left" Margin="53,73,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.316,0.654" FontStyle="Italic"/>
+        <Label Name="lblAccNo" Content="" HorizontalAlignment="Left" Margin="135,73,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.316,0.654"/>
+        <Label Content="Owner:" HorizontalAlignment="Left" Margin="53,101,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.316,0.654" FontStyle="Italic"/>
+        <Label Name="lblOwnerName" Content="" HorizontalAlignment="Left" Margin="135,101,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.316,0.654"/>
+        <Label Content="Account type:" HorizontalAlignment="Left" Margin="53,131,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.316,0.654" FontStyle="Italic"/>
+        <Label Name="lblAccType" Content="" HorizontalAlignment="Left" Margin="136,131,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.316,0.654"/>
+        <Label Content="Balance:" HorizontalAlignment="Left" Margin="53,161,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.316,0.654" FontStyle="Italic"/>
+        <Label Name="lblBalance" Content="" HorizontalAlignment="Left" Margin="139,161,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.316,0.654"/>
+        <Label Content="Account number of the beneficiary:" HorizontalAlignment="Left" Margin="301,91,0,0" VerticalAlignment="Top"/>
+        <TextBox Name="tbBeneficiaryAcct" HorizontalAlignment="Left" Height="23" Margin="525,94,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="110" KeyDown="tbBeneficiaryAcct_KeyDown"/>
+        <Button Name="btCancel" Content="Cancel" Click="btCancel_Click" IsCancel="True" HorizontalAlignment="Left" Margin="343,191,0,0" VerticalAlignment="Top" Width="92" Height="29"/>
+        <Label Content="Amount:" HorizontalAlignment="Left" Margin="301,123,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.153,0.401"/>
+        <TextBox Name="tbAmount" HorizontalAlignment="Left" Height="23" Margin="525,125,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="110" KeyDown="tbAmount_KeyDown"/>
+        <Button Name="btTransfer" Click="btOK_Click" IsDefault="True" Content="Transfer" HorizontalAlignment="Left" Margin="485,191,0,0" VerticalAlignment="Top" Width="92" Height="29"/>
+        <Label Content="Transfer" HorizontalAlignment="Left" Margin="426,34,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="16"/>
     </Grid>
 </Window>
