--- a/CustomerUI/MakePayment.xaml
+++ b/CustomerUI/MakePayment.xaml
@@ -12,12 +12,12 @@
         <Label Content="Balance:" HorizontalAlignment="Left" Margin="275,25,0,0" VerticalAlignment="Top"/>
         <TextBox Name="tbBalance" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="333,25,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <Label Content="Type the payment bill number:" HorizontalAlignment="Left" Margin="29,75,0,0" VerticalAlignment="Top"/>
-        <TextBox Name="tbBeneficiaryAcct" HorizontalAlignment="Left" Height="23" Margin="208,78,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="245"/>
+        <TextBox Name="tbBeneficiaryAcct" HorizontalAlignment="Left" Height="23" Margin="208,78,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="245" KeyDown="tbBeneficiaryAcct_KeyDown"/>
         <Button Name="btCancel" Content="Cancel" Click="btCancel_Click" IsCancel="True" HorizontalAlignment="Left" Margin="258,224,0,0" VerticalAlignment="Top" Width="92" Height="42"/>
         <Label Content="New balance:" HorizontalAlignment="Left" Margin="144,163,0,0" VerticalAlignment="Top" Width="86"/>
         <TextBox Name="tbNewBalance" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="230,166,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <Label Content="Amount:" HorizontalAlignment="Left" Margin="251,125,0,0" VerticalAlignment="Top"/>
-        <TextBox Name="tbAmount" HorizontalAlignment="Left" Height="23" Margin="311,125,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="142"/>
+        <TextBox Name="tbAmount" HorizontalAlignment="Left" Height="23" Margin="311,125,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="142" KeyDown="tbAmount_KeyDown"/>
         <Button Name="btOK" Click="btOK_Click" IsDefault="True" Content="OK" HorizontalAlignment="Left" Margin="361,224,0,0" VerticalAlignment="Top" Width="92" Height="42"/>
         <Label Content="Purpose:" HorizontalAlignment="Left" Margin="29,122,0,0" VerticalAlignment="Top"/>
         <ComboBox Name="comboCategory" HorizontalAlignment="Left" Margin="90,125,0,0" VerticalAlignment="Top" Width="140"/>
