--- a/CustomerUI/MakeTransfer.xaml
+++ b/CustomerUI/MakeTransfer.xaml
@@ -8,7 +8,7 @@
         Title="Make a transfer to another account" Height="332.173" Width="685.387">
     <Grid>
         <Label Content="Account summary" HorizontalAlignment="Left" Margin="74,36,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="14"/>
-        <StackPanel Background="MediumSeaGreen" HorizontalAlignment="Left" Height="146" Margin="36,65,0,0" VerticalAlignment="Top" Width="210"/>
+        <StackPanel Background="MediumSeaGreen" HorizontalAlignment="Left" Height="146" Margin="36,65,0,0" VerticalAlignment="Top" Width="260"/>
         <Label Content="Account no:" HorizontalAlignment="Left" Margin="53,73,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.316,0.654" FontStyle="Italic"/>
         <Label Name="lblAccNo" Content="" HorizontalAlignment="Left" Margin="135,73,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.316,0.654"/>
         <Label Content="Owner:" HorizontalAlignment="Left" Margin="53,101,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.316,0.654" FontStyle="Italic"/>
@@ -19,10 +19,11 @@
         <Label Name="lblBalance" Content="" HorizontalAlignment="Left" Margin="139,161,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.316,0.654"/>
         <Label Content="Account number of the beneficiary:" HorizontalAlignment="Left" Margin="301,91,0,0" VerticalAlignment="Top"/>
         <TextBox Name="tbBeneficiaryAcct" HorizontalAlignment="Left" Height="23" Margin="525,94,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="110" KeyDown="tbBeneficiaryAcct_KeyDown"/>
-        <Button Name="btCancel" Content="Cancel" Click="btCancel_Click" IsCancel="True" HorizontalAlignment="Left" Margin="343,191,0,0" VerticalAlignment="Top" Width="92" Height="29"/>
+        <Button Name="btCancel" Content="Cancel" IsCancel="True" HorizontalAlignment="Left" Margin="343,191,0,0" VerticalAlignment="Top" Width="92" Height="29"/>
         <Label Content="Amount:" HorizontalAlignment="Left" Margin="301,123,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.153,0.401"/>
         <TextBox Name="tbAmount" HorizontalAlignment="Left" Height="23" Margin="525,125,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="110" KeyDown="tbAmount_KeyDown"/>
         <Button Name="btTransfer" Click="btOK_Click" IsDefault="True" Content="Transfer" HorizontalAlignment="Left" Margin="485,191,0,0" VerticalAlignment="Top" Width="92" Height="29"/>
         <Label Content="Transfer" HorizontalAlignment="Left" Margin="426,34,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="16"/>
+        <Button Click="btBackToTrans_Click" x:Name="btBackToTrans" IsDefault="True" Content="Back to transactions"  HorizontalAlignment="Left" Margin="537,252,0,0" VerticalAlignment="Top" Width="119" Height="29"/>
     </Grid>
 </Window>
