--- a/BankManagementSys/ViewAccountInfo.xaml
+++ b/BankManagementSys/ViewAccountInfo.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BankManagementSys"
         mc:Ignorable="d"
-        Title="View Account Information" Height="450" Width="378">
+        Title="View Account Information" Height="537" Width="811">
     <Grid>
         <StackPanel Background="Azure" HorizontalAlignment="Left" Height="159" Margin="33,21,0,0" VerticalAlignment="Top" Width="305"/>
         <Label Content="Account's owner information:" HorizontalAlignment="Left" Margin="42,29,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="14"/>
@@ -15,17 +15,41 @@
         <Label Name="lblDateOfBirth" Content="." HorizontalAlignment="Left" Margin="128,90,0,0" VerticalAlignment="Top"/>
         <Label Content="National Id:" HorizontalAlignment="Left" Margin="42,121,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lblNatId" Content="." HorizontalAlignment="Left" Margin="128,120,0,0" VerticalAlignment="Top"/>
-        <StackPanel Background="LightGray" HorizontalAlignment="Left" Height="159" Margin="33,198,0,0" VerticalAlignment="Top" Width="305"/>
+        <StackPanel Background="LightGray" HorizontalAlignment="Left" Height="235" Margin="33,198,0,0" VerticalAlignment="Top" Width="305">
+        </StackPanel>
+        <Label x:Name="lblAccType" Content="." HorizontalAlignment="Left" Margin="152,230,0,0" VerticalAlignment="Top"/>
         <Label Content="Account information:" HorizontalAlignment="Left" Margin="42,203,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="14"/>
-        <Label Content="Account number:" HorizontalAlignment="Left" Margin="43,233,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lblAccNo" Content="." HorizontalAlignment="Left" Margin="151,232,0,0" VerticalAlignment="Top"/>
-        <Label Content="Date of opening:" HorizontalAlignment="Left" Margin="43,257,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lblOpenDate" Content="." HorizontalAlignment="Left" Margin="151,256,0,0" VerticalAlignment="Top"/>
-        <Label Content="Balance:" HorizontalAlignment="Left" Margin="43,282,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lblBalance" Content="." HorizontalAlignment="Left" Margin="151,279,0,0" VerticalAlignment="Top"/>
-        <Label Content="Account type" HorizontalAlignment="Left" Margin="43,308,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lblAccType" Content="." HorizontalAlignment="Left" Margin="151,306,0,0" VerticalAlignment="Top"/>
-        <Button Click="btOk_Click" Name="btOk" Content="OK" IsDefault="True" HorizontalAlignment="Left" Margin="152,379,0,0" VerticalAlignment="Top" Width="75"/>
+        <Label Content="Account number:" HorizontalAlignment="Left" Margin="43,256,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lblAccNo" Content="." HorizontalAlignment="Left" Margin="151,255,0,0" VerticalAlignment="Top"/>
+        <Label Content="Date of opening:" HorizontalAlignment="Left" Margin="43,280,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lblOpenDate" Content="." HorizontalAlignment="Left" Margin="151,279,0,0" VerticalAlignment="Top"/>
+        <Label Content="Balance:" HorizontalAlignment="Left" Margin="43,305,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lblBalance" Content="." HorizontalAlignment="Left" Margin="151,302,0,0" VerticalAlignment="Top"/>
+        <Button Click="btOk_Click" Name="btOk" Content="OK" IsDefault="True" HorizontalAlignment="Left" Margin="514,450,0,0" VerticalAlignment="Top" Width="75"/>
+        <Label Content="Account type:" HorizontalAlignment="Left" Margin="43,232,0,0" VerticalAlignment="Top"/>
+        <Label Content="Monthly fee:" HorizontalAlignment="Left" Margin="43,330,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lblMonthlyFee" Content="." HorizontalAlignment="Left" Margin="151,327,0,0" VerticalAlignment="Top"/>
+        <Label Name="lblInterestDivid"  Content="..." HorizontalAlignment="Left" Margin="43,355,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lblInterest" Content="." HorizontalAlignment="Left" Margin="151,353,0,0" VerticalAlignment="Top"/>
+        <Label Name="lblInterestOrFee"  Content="..." HorizontalAlignment="Left" Margin="43,379,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lblInterestFeeDate" Content="." HorizontalAlignment="Left" Margin="151,378,0,0" VerticalAlignment="Top"/>
+        <ComboBox SelectionChanged="comboHistory_SelectionChanged" Name="comboHistory" HorizontalAlignment="Left" Margin="592,87,0,0" VerticalAlignment="Top" Width="155"/>
+        <RadioButton Checked="RadioButton_Checked" Name="rbTransactAll" GroupName="Transactions" IsChecked="True" Content="All" HorizontalAlignment="Left" Margin="376,124,0,0" VerticalAlignment="Top"/>
+        <RadioButton Checked="RadioButton_Checked" Name="rbTransacDeposits" GroupName="Transactions" Content="Deposits" HorizontalAlignment="Left" Margin="423,124,0,0" VerticalAlignment="Top"/>
+        <RadioButton Checked="RadioButton_Checked" Name="rbTransacWithdrawals" GroupName="Transactions" Content="Withdrawals" HorizontalAlignment="Left" Margin="498,124,0,0" VerticalAlignment="Top"/>
+        <RadioButton Checked="RadioButton_Checked" Name="rbTransacTransfers" GroupName="Transactions" Content="Transfers" HorizontalAlignment="Left" Margin="595,125,0,0" VerticalAlignment="Top"/>
+        <RadioButton Checked="RadioButton_Checked" Name="rbTransacPayments" GroupName="Transactions" Content="Payments" HorizontalAlignment="Left" Margin="675,125,0,0" VerticalAlignment="Top"/>
+        <ListView Name="lvTransactions" HorizontalAlignment="Left" Height="223" Margin="377,156,0,0" VerticalAlignment="Top" Width="370">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="Transaction Type" Width="120" DisplayMemberBinding="{Binding Type}"/>
+                    <GridViewColumn Header="Date" Width="120" DisplayMemberBinding="{Binding Date, StringFormat=d}"/>
+                    <GridViewColumn Header="Amount" Width="100" DisplayMemberBinding="{Binding Amount, StringFormat=#.00}"/>
+                </GridView>
+            </ListView.View>
+        </ListView>
+        <Label Content="Recent account transactions:" HorizontalAlignment="Left" Margin="372,82,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="14"/>
+        <Button Click="btDeposit_Click" Name="btDeposit" Content="Make Deposit" HorizontalAlignment="Left" Margin="423,401,0,0" VerticalAlignment="Top" Width="95"/>
 
 
 
