--- a/CustomerUI/MakeTransfer.xaml
+++ b/CustomerUI/MakeTransfer.xaml
@@ -10,13 +10,13 @@
         <Label Content="Account summary" HorizontalAlignment="Left" Margin="74,36,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="14"/>
         <StackPanel Background="MediumSeaGreen" HorizontalAlignment="Left" Height="146" Margin="36,65,0,0" VerticalAlignment="Top" Width="260"/>
         <Label Content="Account no:" HorizontalAlignment="Left" Margin="53,73,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.316,0.654" FontStyle="Italic"/>
-        <Label Name="lblAccNo" Content="" HorizontalAlignment="Left" Margin="135,73,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.316,0.654"/>
+        <Label Name="lblAccNo" Content="" HorizontalAlignment="Left" Margin="135,73,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.316,0.654" Width="110"/>
         <Label Content="Owner:" HorizontalAlignment="Left" Margin="53,101,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.316,0.654" FontStyle="Italic"/>
-        <Label Name="lblOwnerName" Content="" HorizontalAlignment="Left" Margin="135,101,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.316,0.654"/>
+        <Label Name="lblOwnerName" Content="" HorizontalAlignment="Left" Margin="105,101,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.316,0.654" Width="182"/>
         <Label Content="Account type:" HorizontalAlignment="Left" Margin="53,131,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.316,0.654" FontStyle="Italic"/>
-        <Label Name="lblAccType" Content="" HorizontalAlignment="Left" Margin="136,131,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.316,0.654"/>
+        <Label Name="lblAccType" Content="" HorizontalAlignment="Left" Margin="136,131,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.316,0.654" Width="109"/>
         <Label Content="Balance:" HorizontalAlignment="Left" Margin="53,161,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.316,0.654" FontStyle="Italic"/>
-        <Label Name="lblBalance" Content="" HorizontalAlignment="Left" Margin="139,161,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.316,0.654"/>
+        <Label Name="lblBalance" Content="" HorizontalAlignment="Left" Margin="111,161,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.316,0.654" Width="77"/>
         <Label Content="Account number of the beneficiary:" HorizontalAlignment="Left" Margin="301,91,0,0" VerticalAlignment="Top"/>
         <TextBox Name="tbBeneficiaryAcct" HorizontalAlignment="Left" Height="23" Margin="525,94,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="110" KeyDown="tbBeneficiaryAcct_KeyDown"/>
         <Button Name="btCancel" Content="Cancel" IsCancel="True" HorizontalAlignment="Left" Margin="343,191,0,0" VerticalAlignment="Top" Width="92" Height="29"/>
