--- a/BankManagementSys/ViewAccountInfo.xaml
+++ b/BankManagementSys/ViewAccountInfo.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BankManagementSys"
         mc:Ignorable="d"
-        Title="View Account Information" Height="537" Width="811">
+        Title="View Account Information" Height="554" Width="811">
     <Grid>
         <StackPanel Background="Azure" HorizontalAlignment="Left" Height="159" Margin="33,21,0,0" VerticalAlignment="Top" Width="305"/>
         <Label Content="Account's owner information:" HorizontalAlignment="Left" Margin="42,29,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="14"/>
@@ -25,7 +25,7 @@
         <Label x:Name="lblOpenDate" Content="." HorizontalAlignment="Left" Margin="151,279,0,0" VerticalAlignment="Top"/>
         <Label Content="Balance:" HorizontalAlignment="Left" Margin="43,305,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lblBalance" Content="." HorizontalAlignment="Left" Margin="151,302,0,0" VerticalAlignment="Top"/>
-        <Button Click="btOk_Click" Name="btOk" Content="OK" IsDefault="True" HorizontalAlignment="Left" Margin="514,450,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Click="btOk_Click" Name="btOk" Content="OK" IsDefault="True" HorizontalAlignment="Left" Margin="535,478,0,0" VerticalAlignment="Top" Width="75"/>
         <Label Content="Account type:" HorizontalAlignment="Left" Margin="43,232,0,0" VerticalAlignment="Top"/>
         <Label Content="Monthly fee:" HorizontalAlignment="Left" Margin="43,330,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lblMonthlyFee" Content="." HorizontalAlignment="Left" Margin="151,327,0,0" VerticalAlignment="Top"/>
@@ -39,7 +39,7 @@
         <RadioButton Checked="RadioButton_Checked" Name="rbTransacWithdrawals" GroupName="Transactions" Content="Withdrawals" HorizontalAlignment="Left" Margin="498,124,0,0" VerticalAlignment="Top"/>
         <RadioButton Checked="RadioButton_Checked" Name="rbTransacTransfers" GroupName="Transactions" Content="Transfers" HorizontalAlignment="Left" Margin="595,125,0,0" VerticalAlignment="Top"/>
         <RadioButton Checked="RadioButton_Checked" Name="rbTransacPayments" GroupName="Transactions" Content="Payments" HorizontalAlignment="Left" Margin="675,125,0,0" VerticalAlignment="Top"/>
-        <ListView Name="lvTransactions" HorizontalAlignment="Left" Height="223" Margin="377,156,0,0" VerticalAlignment="Top" Width="370">
+        <ListView MouseDoubleClick="lvTransactions_MouseDoubleClick" Name="lvTransactions" HorizontalAlignment="Left" Height="223" Margin="377,156,0,0" VerticalAlignment="Top" Width="370">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Transaction Type" Width="120" DisplayMemberBinding="{Binding Type}"/>
@@ -50,6 +50,9 @@
         </ListView>
         <Label Content="Recent account transactions:" HorizontalAlignment="Left" Margin="372,82,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="14"/>
         <Button Click="btDeposit_Click" Name="btDeposit" Content="Make Deposit" HorizontalAlignment="Left" Margin="423,401,0,0" VerticalAlignment="Top" Width="95"/>
+        <Button Click="btWithdrawal_Click" x:Name="btWithdrawal" Content="Make Withdrawal" HorizontalAlignment="Left" Margin="535,401,0,0" VerticalAlignment="Top" Width="105"/>
+        <Button Click="btTransfer_Click" x:Name="btTransfer" Content="Make Transfer" HorizontalAlignment="Left" Margin="651,401,0,0" VerticalAlignment="Top" Width="105"/>
+        <Button Click="btPayment_Click" x:Name="btPayment" Content="Make Payment" HorizontalAlignment="Left" Margin="538,437,0,0" VerticalAlignment="Top" Width="105"/>
 
 
 
