--- a/BankManagementSys/TransactionDialog.xaml
+++ b/BankManagementSys/TransactionDialog.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="BankManagementSys.Deposit"
+﻿<Window x:Class="BankManagementSys.TransactionDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BankManagementSys"
         mc:Ignorable="d"
-        Title="Deposit" Height="341" Width="834">
+        Title="TransactionDialog" Height="341" Width="834">
     <Grid>
         <StackPanel Background="Azure" HorizontalAlignment="Left" Height="170" Margin="33,60,0,0" VerticalAlignment="Top" Width="333"/>
         <StackPanel Background="LightGray" HorizontalAlignment="Left" Height="310" Margin="380,0,0,0" VerticalAlignment="Top" Width="446"/>
